--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
+  <link rel="manifest" href="manifest.json">
 <title>Merge Melons</title>
 <meta name="description" content="Play Merge Melons">
 <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
